# dotify

./: CMakeLists.txt  README.md  TGameEngine.cpp  main.cpp  normalizador.cpp  normalizador.h
apt-repo/: Packages
apt-repo/pool/main/: dotify_1.0-1.deb
include/: TGameEngine.h
